--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,16 +35,16 @@ jobs:
           command: ver
 
       # TASK 1 - Runs all tests in the repository using run-tests action
-      - name: Run all tests
-        uses: matlab-actions/run-tests@v2
-        with:
-          source-folder: ??
+      # - name: Run all tests
+      #   uses: matlab-actions/run-tests@v2
+      #   with:
+      #     source-folder: ??
 
       # TASK 2 - Run all tests in the repository using run-build action
       - name: Run all tests using buildtool
         uses: matlab-actions/run-build@v2
         with:
-          tasks: ??
+          tasks: test
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
